--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@
 
 add_subdirectory("bafka")
 add_subdirectory("bafka_client")
-# add_subdirectory("tests")
+add_subdirectory("bafka_server")
+add_subdirectory("tests")
