--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -21,3 +21,10 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
 # [Optional] Uncomment this section to install additional packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
+
+RUN curl -O https://capnproto.org/capnproto-c++-0.10.2.tar.gz
+RUN tar zxf capnproto-c++-0.10.2.tar.gz
+WORKDIR capnproto-c++-0.10.2/
+RUN ./configure
+RUN make -j6 check
+RUN sudo make install
