--- a/src/bafka/CMakeLists.txt
+++ b/src/bafka/CMakeLists.txt
@@ -2,7 +2,19 @@
 
 find_package(CapnProto CONFIG REQUIRED)
 
-target_link_libraries(idl)
+target_link_libraries(idl2)
 
-add_executable (bafka "main.cpp" )
+ 
+set(CMAKE_CXX_STANDARD 17)
+
+file(GLOB SRC
+     "*.cpp"
+)
+
+add_library(bafka ${SRC}) 
+
+set_target_properties(bafka PROPERTIES LINKER_LANGUAGE CXX)
+
 target_link_libraries(bafka CapnProto::capnp)
+target_include_directories(bafka INTERFACE ${CMAKE_SOURCE_DIR}/src )
+target_compile_definitions(bafka PRIVATE)
