--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,14 @@
         "thread": "cpp",
         "codecvt": "cpp",
         "condition_variable": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "xhash": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp",
+        "xtree": "cpp"
     }
 }
