--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,12 @@
-﻿project ("bafka")
+﻿project ("context")
 
-add_subdirectory("bafka")
-add_subdirectory("bafka_client")
-add_subdirectory("bafka_server")
-add_subdirectory("tests")
+
+
+file(GLOB SRC
+{    "*.cpp"
+     "*.cc"
+)
+add_executable (app "${SRC}" )
+set(SFML_STATIC_LIBRARIES TRUE)
+target_link_libraries(app sfml-graphics sfml-window)
+
