--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,7 @@
 #
 cmake_minimum_required(VERSION 3.14)
 
-project ("bafka")
-
-enable_testing()
-
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG release-1.12.1
-)
-FetchContent_MakeAvailable(googletest)
+project ("context")
 
 # add_compile_options(-fsanitize=address)
 # add_link_options(-fsanitize=address)
@@ -23,9 +12,23 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+add_definitions(-D_HAS_AUTO_PTR_ETC=1)
+
+include(FetchContent)
+set(BUILD_SHARED_LIBS OFF)
+FetchContent_Declare(
+ SFML
+ GIT_REPOSITORY https://github.com/SFML/SFML.git
+ GIT_TAG 2.5.1
+)
+
+FetchContent_MakeAvailable(SFML)
+
+
+
 include_directories("build/")
 
-add_subdirectory ("idl")
+
 add_subdirectory("src")
 
 
